--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,13 +34,13 @@ a:hover{
     
 }
 
-.navbar{
+.links{
     height: 55px;
     background-color: black;
     box-shadow: 0 3px var(--red);
     color: #9E7C0C;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     .logo{
         font-size: 1.2em;
