--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,14 +2,9 @@
 // - can't get bold on hover
 
 :root{
-    --background-color: white;
-    --background-light: white;
-    // --shadow-color: black;
     --red: #C60C30;
-    // --text-color: #0a0a0a;
-    --text-light: #575757;
-    // --font-size: 16px;
     --gold: #9E7C0C;
+    --purple: #241773;
     --animation-speed: 1;
 }
 
@@ -22,34 +17,34 @@
 body{
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
+    background-color: var(--purple) ;
+
 }
 
 a{
     text-decoration: none;
-    // font-weight: bold;
+    color: var(--gold);
 }
 
 a:hover{
-    color: var(--gold);
-    
+    color: #ffffff;
+    text-decoration: underline;
+    text-transform: lowercase;  
 }
 
 .links{
     height: 55px;
     background-color: black;
-    box-shadow: 0 3px var(--red);
-    color: #9E7C0C;
+    box-shadow: 0 3px var(--gold);
+    color: var(--gold);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     .logo{
         font-size: 1.2em;
         font-weight: bold;
-        color: var(--red);
+        color: var(--gold);
         text-decoration: none;
     }
 }
 
-.container{
-    padding-inline: 15vw;
-}
