--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -21,7 +21,7 @@
 body{
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
-    background-color: var(--green);
+    background-color: black;
 }
 
 a{
